--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
             "cmdk": "^1.1.1",
             "embla-carousel-react": "^8.6.0",
             "input-otp": "^1.4.2",
+            "install": "^0.13.0",
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
+            "npm": "^11.7.0",
             "react": "^18.3.1",
             "react-day-picker": "^8.10.1",
             "react-dom": "^18.3.1",
