--- a/package.json
+++ b/package.json
@@ -51,11 +51,16 @@
             "vaul": "^1.1.2"
       },
       "devDependencies": {
+            "@testing-library/jest-dom": "^6.9.1",
+            "@testing-library/react": "^16.3.1",
             "@types/node": "^20.10.0",
             "@types/react": "^19.2.2",
             "@types/react-dom": "^19.2.2",
             "@vitejs/plugin-react-swc": "^3.10.2",
-            "vite": "6.3.5"
+            "@vitest/coverage-v8": "^4.0.16",
+            "jsdom": "^27.4.0",
+            "vite": "6.3.5",
+            "vitest": "^4.0.16"
       },
       "scripts": {
             "dev": "vite",
